@@ -2,7 +2,7 @@
 
 0.9 (Community Beta)
 Ajax Browse support for links
-Repports on classification removed on  p / li / ul on publish or when you try to edit again
+classification is removed on li / tr on publish
 
 
 1.0
