@@ -7,6 +7,7 @@ eZ Online Editor MCE extension Changelog
 * EditorCSSFileList support added, support for css from other locations
 * tinymce plugins from other locations (extensions/designs) now possible
 * fixed and enabled indenting / outdenting 
+* fixed class not working on p / header tags
 
 
 0.95
